Bug 371542 - If the photoshop shortcut scheme is active, most menu entries are blank
Summary: If the photoshop shortcut scheme is active, most menu entries are blank
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tablets (tablet issues are only very rarely bugs in Krita!) (other bugs)
Version First Reported In: 3.0.1.1
Platform: unspecified macOS
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL: https://66.media.tumblr.com/cb0130aa8...
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-23 21:02 UTC by harri294
Modified: 2016-10-31 09:30 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kritarc (23.48 KB, text/plain)
2016-10-24 20:16 UTC, harri294
Details

Note You need to log in before you can comment on or make changes to this bug.
Description harri294 2016-10-23 21:02:50 UTC
Computer:
OSX El Capitan, Version 10.11.6
Macbook Pro (late 2013)

Tablet:
Wacom Intuos Pro (Late 2016)

First time reporting a bug. 

I have two issues with the most recent version of Krita for OSX (3.0.1.90). I'm unsure if they are related but they began happening at the same time. When I open Krita many items from the dropdown menus are missing (see URL provided for a screenshot). Pen Pressure sensitivity also does not work with the program. 

I have tried uninstalling and reinstalling Krita, updated my tablet drivers and checked and unchecked OpenGL multiple times. Pen Pressure still works on Photoshop CS6.

Reproducible: Always

Steps to Reproduce:
1.Open Krita
2.Draw using tablet

Actual Results:  
Pen pressure does not work.

Expected Results:  
Pen Pressure should work
Comment 1 Halla Rempt 2016-10-24 06:55:02 UTC
Curious -- the same issue was reported on Windows against 3.0.91 (which is really the latest beta, 3.0.1.90 is the previous beta). It doesn't happen on any of my test systems, not on Windows, not on OSX, not on LInux, so I'm wondering what's up.

Does it make a difference if you remove the Krita settings file (~/Library/Preferences/kritarc)?
Comment 2 Quiralta 2016-10-24 15:36:43 UTC
I had this similar issue last couple of days, plus the visual bugs on the menus and the disappearance of all the shortcuts, I can confirm that removing the kritarc and the kritashortcutsrc brought back to normal all three issues including pen pressure, (archlinux/plasmas on latest builds from master)
Comment 3 Halla Rempt 2016-10-24 15:40:56 UTC
Do you have a copy of the kritarc that caused the problems? If so, can you share it? I wonder what's in it that presents these issues.
Comment 4 Quiralta 2016-10-24 15:51:56 UTC
Unfortunately I completely deleted those two files, hopefully the OP has them still, also if I remember correctly on the IRC timotimo said to have the same menu problem (with many of the options not visible), maybe he also has a kritarc that can be shared?
Comment 5 harri294 2016-10-24 20:16:48 UTC
Created attachment 101755 [details]
Kritarc
Comment 6 harri294 2016-10-24 20:25:07 UTC
Apologies for the double post, I'm still trying to figure out how to use this website properly. Removing both files seems to have solved the issue, thanks for your help.

The kritarc file has been posted as an attachment. I tried uploading kritashortcutsrc as well but get an error message. If there is a preferred method of sharing files please let me know, I will be keeping them until I can send them off properly.
Comment 7 Halla Rempt 2016-10-24 21:15:23 UTC
Thanks for uploading the file! the kritashortcutsrc probably isn't necessary, so don't worry about that one. I'll check what's up tomorrow morning.
Comment 8 jdreske 2016-10-30 10:59:34 UTC
I just tried Krita 3.0.91 on OSX 10.11.6 and also see the problems mentioned above: 
-greyed out menuitems are invisible, 'preserve alpha' button is empty
-pen pressure is not working (wacom intuos pro), 
-keyboard shortcuts do not show up in the preferences, but most seem to work, -'e' shortcut to switch a brush into eraser mode does not work.


Krita 3.0.1.90 does not show these issues. This version is pretty usable for me despite some minor problems:
-it's not possible to overwrite brush presets
-invoking the hud with wacom intuos pro immediately changes the color or the brush, whatever is under the cursor position
-v shortcut switches to random(?) tools and back
-fast drawn circles turn to polygons after some time of using krita (not always)
-height and width of the tooltabs on the right are not adjustable 
-sometimes brushes change not correctly, some settings stay the same
-I really cannot figure out how to get the eraser on the stylus working?
Comment 9 wolthera 2016-10-30 11:28:16 UTC
I think the problem was confirmed to be with the Krita shortcuts by scott petrovic. Particularly the / containing action names in the photoshop compatible shortcut list cause this issue, but we're not usre why...
Comment 10 Halla Rempt 2016-10-30 11:53:17 UTC
I could reproduce this this morning on a kubuntu laptop of mine and indeed, the shortcut scheme was set to photoshop compatible. I'll dig in some more next week.
Comment 11 Halla Rempt 2016-10-31 09:30:34 UTC
Git commit b4edd0646092429157249c65eebb4c3de5696919 by Boudewijn Rempt.
Committed on 31/10/2016 at 09:30.
Pushed by rempt into branch 'master'.

Fix loading the photoshop compatible shortcut scheme
Closed phabricator task T4213

M  +1    -0    libs/widgetutils/kis_action_registry.cpp

http://commits.kde.org/krita/b4edd0646092429157249c65eebb4c3de5696919