Fix loading the photoshop compatible shortcut scheme

BUG:371542
Closed phabricator task T4213